--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "test-supabase": "node scripts/test-supabase.js"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
     "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "^2.48.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "@supabase/supabase-js": "^2.48.1"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
